# rustscript-bevy-gameplay

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/shooter/: LICENSE.md
docs/superpowers/specs/: 2026-07-10-xqwlight-xiangqi-ai-design.md
examples/: combat.rs  gomoku.rs  script_editor.rs  shooter.rs  xiangqi.rs
examples/common/: board_save.rs  script_editor.rs
scripts/: damage_formula.rss  gomoku_ai.rss  gomoku_move.rss  shooter_game.rss  xiangqi_ai.rss  xiangqi_move.rss
src/: lib.rs
tests/: ai_matchplay.rs  example_smoke.rs  gomoku_script.rs  gomoku_strength.rs  scripted_damage.rs  shooter_script.rs  xiangqi_script.rs  xiangqi_strength.rs
