[package]
name = "rustscript-bevy-gameplay"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
bevy_ecs = "0.18.1"
pd-host-function = { path = "../rustscript/pd-vm/pd-host-function" }
vm = { package = "pd-vm", path = "../rustscript/pd-vm", default-features = false, features = ["runtime"] }

[dev-dependencies]
pretty_assertions = "1"
