[package]
name = "rustscript-bevy-gameplay"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
bevy_ecs = "0.18.1"
pd-host-function = { path = "../rustscript/pd-host-function" }
vm = { package = "pd-vm", path = "../rustscript", default-features = false, features = ["runtime", "cranelift-jit"] }

[dev-dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["default_app", "bevy_winit", "x11", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_sprite_render", "bevy_text", "bevy_ui", "bevy_ui_render", "default_font", "png"] }
bevy_egui = "0.39.1"
fontdb = "0.23"
pretty_assertions = "1"
